bug 20327 - add scrollbar to device error dialog (begrudging r=mook)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@17779 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/app/skin/dialogs/deviceErrorDialog.css
+++ b/app/skin/dialogs/deviceErrorDialog.css
@@ -3,7 +3,7 @@
  *
  * This file is part of the Songbird web player.
  *
- * Copyright(c) 2005-2009 POTI, Inc.
+ * Copyright(c) 2005-2010 POTI, Inc.
  * http://www.songbirdnest.com
  *
  * This file may be licensed under the terms of of the
@@ -24,8 +24,9 @@
 
 #errors_desc_box
 {
-  min-height: 6em;
-  overflow: auto;
+  display: block;
+  overflow-y: scroll;
+  min-height: 8em;
 }
 
 .device_error_desc
@@ -34,4 +35,5 @@
   -moz-user-select: text;
   white-space: pre-wrap;
   cursor: text;
+  display: block;
 }
